Added Gradle tasks to automatically generate AOT cache